# platform

./: .env  .env.default  .env.testing  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.json  build.sh  package.json  pre-build.js  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
backend/: .pre-commit-config.yaml  README.md  agency_manager.py  agency_swarm_demo.py  config.py  constants.py  exception_handlers.py  exceptions.py  functions.py  main.py  prompts.py  pyproject.toml  settings.py  version.py
backend/base_agency/: agency_manager.py  config.py  prompts.py
backend/custom_skills/: README.md  __init__.py  build_directory_tree.py  generate_proposal.py  get_sql_database_metadata.py  print_all_files_in_path.py  print_file_contents.py  save_lead_to_airtable.py  search_web.py  select_from_relational_db.py  select_from_sql_database.py  summarize_all_code_in_path.py  summarize_code.py  utils.py  write_and_save_program.py
backend/custom_tools/: __init__.py  build_directory_tree.py  build_tree.sh  execute_command.py  generate_proposal.py  print_all_files_in_directory.py  print_files.sh  search_web.py  utils.py  write_and_save_program.py  write_to_file.py
backend/custom_tools/tests/: conftest.py  test_build_directory_tree.py  test_print_all_files_in_directory.py
backend/data/: Requirement_Gathering_Guidelines_for_Analysts.txt  Software_Development_Guidelines_for_Analysts.docx  Software_Development_Guidelines_for_Analysts.txt  Software_Development_Guidelines_for_Developers.docx  Software_Development_Guidelines_for_Developers.txt  default_config.json  knowledge.docx
backend/dependencies/: auth.py  dependencies.py  middleware.py
backend/deprecated/: Requirement_Gathering_Guidelines_for_Analysts.txt
backend/models/: README.md  agency_config.py  agent_config.py  agent_flow_spec.py  auth.py  message.py  request_models.py  response_models.py  session_config.py  skill_config.py
backend/repositories/: README.md  agency_config_firestore_storage.py  agency_config_storage.py  agent_config_firestore_storage.py  agent_flow_spec_firestore_storage.py  agent_flow_spec_storage.py  env_config_firestore_storage.py  env_config_storage.py  s3_storage.py  session_firestore_storage.py  session_storage.py  skill_config_firestore_storage.py  skill_config_storage.py  user_profile_storage.py  user_secret_storage.py  user_variable_storage.py
backend/routers/: README.md  __init__.py  websocket.py
backend/routers/api/: __init__.py
backend/routers/api/v1/: __init__.py  agency.py  agent.py  message.py  profile.py  session.py  skill.py  user.py
backend/routers/v1/: websocket.py
backend/routers/v1/api/: __init__.py  agency.py  agent.py  message.py  session.py  skill.py  user.py  version.py
backend/services/: README.md  agency_manager.py  agent_manager.py  auth_service.py  context_vars_manager.py  encryption_service.py  env_config_manager.py  env_vars_manager.py  message_manager.py  oai_client.py  redis_cache_manager.py  session_manager.py  skill_executor.py  skill_manager.py  skill_service.py  user_profile_manager.py  user_secret_manager.py  user_variable_manager.py  websocket_connection_manager.py  websocket_handler.py
backend/services/adapters/: agency_adapter.py  agent_adapter.py  agent_flow_spec_adapter.py  session_adapter.py
backend/services/caching/: redis_cache_manager.py
backend/services/websocket/: utils.py  websocket_connection_manager.py  websocket_handler.py
backend/utils/: __init__.py
backend/utils/logging_utils/: __init__.py  gcloud_logging_handler.py  json_formatter.py
chatgpt_plugins/market_right_side/: ai-plugin.json  openapi.yaml  plugin_testing.py
frontend/: .env.default  .env.development  .env.production  .gitignore  README.md  gatsby-browser.js  gatsby-config.ts  gatsby-ssr.tsx  package-lock.json  package.json
frontend/static/: chatbot-widget.js
nalgonda/: README.md  agency_config_lock_manager.py  agency_manager.py  constants.py  exception_handlers.py  main.py  settings.py  utils.py
nalgonda/caching/: redis_cache_manager.py
nalgonda/custom_skills/: README.md  __init__.py  build_directory_tree.py  print_all_files_in_path.py  print_file_contents.py  save_lead_to_airtable.py  summarize_all_code_in_path.py  summarize_code.py  write_and_save_program.py
nalgonda/custom_tools/: README.md  __init__.py  build_directory_tree.py  generate_proposal.py  print_all_files_in_directory.py  print_all_files_in_path.py  print_file.py  print_file_contents.py  save_lead_to_airtable.py  search_web.py  summarize_all_code_in_path.py  summarize_code.py  utils.py  write_and_save_program.py
nalgonda/data/: default_config.json  default_config_old.json
nalgonda/dependencies/: README.md  agency_manager.py  agent_manager.py  auth.py  dependencies.py  redis.py  thread_manager.py
nalgonda/models/: README.md  agency_config.py  agent_config.py  auth.py  request_models.py  session_config.py  skill_config.py  tool_config.py
nalgonda/persistence/: agency_config_file_storage.py  agency_config_firestore_storage.py  agency_config_storage_interface.py  agent_config_firestore_storage.py  tool_config_firestore_storage.py  user_repository.py
nalgonda/repositories/: README.md  agency_config_firestore_storage.py  agent_config_firestore_storage.py  env_config_firestore_storage.py  session_firestore_storage.py  skill_config_firestore_storage.py  tool_config_firestore_storage.py
nalgonda/routers/: README.md
nalgonda/services/: README.md  __init__.py  agency_manager.py  agent_manager.py  env_config_manager.py  env_vars_manager.py  oai_client.py  session_manager.py  skill_service.py  thread_manager.py  tool_service.py
nalgonda/utils/: __init__.py
src/nalgonda/: agency_config_lock_manager.py  agency_manager.py  config.py  connection_manager.py  constants.py  exceptions.py  main.py  settings.py  websocket_connection_manager.py
tests/: __init__.py  conftest.py
tests/custom_tools/: test_build_directory_tree.py  test_print_all_files_in_directory.py  test_utils.py
tests/dependencies/: test_agency_manager.py
(+226 files in other folders)
