[tool.poetry]
name = "nalgonda"
version = "0.1.0"
description = ""
authors = [
    "Nikita Bobrovskiy <39348559+bonk1t@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = ">=3.11.0a1,<4.0.0"
flask = ">=3.0.0"
functions = ">=0.7.0"
openai = ">=1.2.3"
packaging = ">=23.2"
requests = ">=2.31.0"
pyairtable = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.6"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
line-length = 120
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
